<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
        <EditText
            android:id="@+id/et_input"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:hint="@string/ord_input"
            android:maxLength="8"
            android:singleLine="false" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_input"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/send" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/et_input"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/clear" />


</RelativeLayout>
